Dependency hygiene: scope zerocode-tdd to test, drop unused AWS DynamoDB SDK
- Add <scope>test</scope> to org.jsmart:zerocode-tdd so the load-test
  framework (and its WireMock/Jetty/Kafka/Velocity transitives) no longer
  ships in the production jar.
- Remove the direct aws-java-sdk-dynamodb dependency. Its only usage was
  com.amazonaws.util.IOUtils.toString(inputStream) in
  PubMedUriParserCallable, now replaced with
  new String(inputStream.readAllBytes(), StandardCharsets.UTF_8), which
  also pins the charset to UTF-8.